# Diffusion-3D-Features

./: .gitignore  MANIFEST.in  __init__.py  correspondence.py  diff3f.py  diff3f_backup.yaml  diff3f_env.yaml  diffusion.py  environment.yaml  environment_retarget_diff3f.yml  evaluate_pipeline_shrec.py  evaluate_pipeline_tosca.py  example_point_similarity.ipynb  example_view_number_impact.ipynb  extract_shrec.py  extract_tosca.py  find_grasp_correspondence.py  pipeline_controlnet_img2img.py  point_to_mesh_similarity.py  pyproject.toml  render.py  requirements.txt  setup.py  setup_args.py  utils.py
dataloaders/: point_cloud_dataset.py
diff3f/: __init__.py  correspondence.py  diff3f.py  diffusion.py  evaluate_pipeline_shrec.py  example_point_similarity.ipynb  extract_shrec.py  extract_tosca.py  find_grasp_correspondence.py  point_to_mesh_similarity.py  render.py  utils.py
diff3f/dataloaders/: point_cloud_dataset.py
