[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff3f"
version = "0.1.0"
authors = [
  {name = "Zeo Liu"},
  {name = "Niladri Shekhar Dutt"},
  {name = "Sanjeev Muralikrishnan"},
  {name = "Niloy J. Mitra"}
]
description = "Diffusion 3D Features (Diff3F): Decorating Untextured Shapes with Distilled Semantic Features"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "diffusers==0.21.4",
    "einops==0.7.0",
    "h5py==3.6.0",
    "huggingface-hub==0.14.1",
    "matplotlib==3.10.6",
    "meshplot",
    "numpy==1.26.4",
    "open3d==0.19.0",
    "plyfile==1.0.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "torch==2.8.0",
    "torchvision",
    "transformers==4.30.2",
    "trimesh==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "jupyter",
]
gpu = [
    "xformers>=0.0.32",
]

[project.scripts]
diff3f-extract-shrec = "diff3f.extract_shrec:main"
diff3f-extract-tosca = "diff3f.extract_tosca:main"
diff3f-eval-shrec = "diff3f.evaluate_pipeline_shrec:main"
diff3f-eval-tosca = "diff3f.evaluate_pipeline_tosca:main"

[tool.setuptools]
packages = ["diff3f"]

[tool.setuptools.package-data]
diff3f = ["meshes/*.obj", "meshes/*.off", "assets/*.jpg", "*.yaml", "*.md"]

